--- a/Destiny2/destiny2/decklist.html
+++ b/Destiny2/destiny2/decklist.html
@@ -18,7 +18,7 @@
                 <h1 class="deck-title">持有卡牌</h1>
                 <div class="deck-options">
                     <button class="button get-button" data-toggle="modal" data-target="#card-model">卡牌选取</button>
-                    <button class="button take-button" data-toggle="modal" data-target="#take-model">顺手牵羊功能</button>
+                    <button class="button take-button" data-toggle="modal" data-target="#take-model">打乱卡牌顺序</button>
                 </div>
                 <hr class="deck-line">
             </div>
