--- a/Destiny2/destiny2/bounty.html
+++ b/Destiny2/destiny2/bounty.html
@@ -19,7 +19,10 @@
                 <div class="bounty-item" id="bounty-1">
                     <div class="bounty-card bounty-front">
                         <div class="bounty-info">
-                            <p class="title">当前没有赏金任务</p>
+                            <div>
+                                <p class="title">当前没有赏金任务</p>
+                                <p class="sub-title"></p>
+                            </div>
                             <p class="text">请过段时间再来</p>
                             <button class="button" data-bounty="false">确认</button>
                         </div>
@@ -34,7 +37,10 @@
                 <div class="bounty-item" id="bounty-2">
                     <div class="bounty-card bounty-front">
                         <div class="bounty-info">
-                            <p class="title">当前没有赏金任务</p>
+                            <div>
+                                <p class="title">当前没有赏金任务</p>
+                                <p class="sub-title"></p>
+                            </div>
                             <p class="text">请过段时间再来</p>
                             <button class="button" data-bounty="false">确认</button>
                         </div>
@@ -49,7 +55,10 @@
                 <div class="bounty-item" id="bounty-3">
                     <div class="bounty-card bounty-front">
                         <div class="bounty-info">
-                            <p class="title">当前没有赏金任务</p>
+                            <div>
+                                <p class="title">当前没有赏金任务</p>
+                                <p class="sub-title"></p>
+                            </div>
                             <p class="text">请过段时间再来</p>
                             <button class="button" data-bounty="false">确认</button>
                         </div>
@@ -65,9 +74,9 @@
     </div>
 </body>
 
-<script src="/destiny2/js/jquery.min.js"></script>
-<script src="/destiny2/js/lottery.js"></script>
-<script src="/destiny2/js/api.js"></script>
-<script src="/destiny2/js/bounty.js"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/lottery.js"></script>
+<script src="js/api.js"></script>
+<script src="js/bounty.js"></script>
 
 </html>
