--- a/Destiny2/destiny2/deck.html
+++ b/Destiny2/destiny2/deck.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="destiny2/images/favicon.ico">
+    <link rel="icon" href="images/favicon.ico">
     <title>命运2 RogueLike 2.0</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/deck.css">
@@ -17,31 +17,31 @@
 
         <div class="deck-list">
             <div class="deck">
-                <div class="deck-1" data-toggle="modal" data-target="#deck-model" id="safe">
+                <div class="deck-1" data-toggle="modal" id="safe">
 
                 </div>
                 <p class="deck-name">- 稳妥起见 -</p>
             </div>
             <div class="deck">
-                <div class="deck-2" data-toggle="modal" data-target="#deck-model" id="danger">
+                <div class="deck-2" data-toggle="modal" id="danger">
 
                 </div>
                 <p class="deck-name">- 险中求胜 -</p>
             </div>
             <div class="deck">
-                <div class="deck-3" data-toggle="modal" data-target="#deck-model" id="gambit">
+                <div class="deck-3" data-toggle="modal" id="gambit">
 
                 </div>
                 <p class="deck-name">- 对赌博弈 -</p>
             </div>
             <div class="deck">
-                <div class="deck-4" data-toggle="modal" data-target="#deck-model" id="luck">
+                <div class="deck-4" data-toggle="modal" id="luck">
 
                 </div>
                 <p class="deck-name">- 时来运转 -</p>
             </div>
             <div class="deck">
-                <div class="deck-5" data-toggle="modal" data-target="#deck-model" id="devote">
+                <div class="deck-5" data-toggle="modal" id="devote">
 
                 </div>
                 <p class="deck-name">- 身心奉献 -</p>
@@ -181,11 +181,11 @@
     </div>
 </body>
 
-<script src="/destiny2/js/jquery.min.js"></script>
-<script src="/destiny2/js/popper.min.js"></script>
-<script src="/destiny2/bootstrap/js/bootstrap.min.js"></script>
-<script src="/destiny2/js/lottery.js"></script>
-<script src="/destiny2/js/api.js"></script>
-<script src="/destiny2/js/deck.js"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/popper.min.js"></script>
+<script src="bootstrap/js/bootstrap.min.js"></script>
+<script src="js/lottery.js"></script>
+<script src="js/api.js"></script>
+<script src="js/deck.js"></script>
 
 </html>
