--- a/Destiny2/destiny2/decklist.html
+++ b/Destiny2/destiny2/decklist.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="destiny2/images/favicon.ico">
+    <link rel="icon" href="images/favicon.ico">
     <title>命运2 RogueLike 2.0</title>
-    <link rel="stylesheet" href="/destiny2/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/decklist.css">
 </head>
 
@@ -23,49 +23,49 @@
                 <hr class="deck-line">
             </div>
 
-            <div class="card-list" id="mg">
+            <div class="card-list" id="MicroGain">
                 <div class="card-list-header">
                     <h2 class="deck-title">微弱增益 - 持有 <span class="count">0</span> 张</h2>
                     <hr class="deck-line">
                 </div>
             </div>
 
-            <div class="card-list" id="sg">
+            <div class="card-list" id="StrongGain">
                 <div class="card-list-header">
                     <h2 class="deck-title">强大增益 - 持有 <span class="count">0</span> 张</h2>
                     <hr class="deck-line">
                 </div>
             </div>
 
-            <div class="card-list" id="o">
+            <div class="card-list" id="Opportunity">
                 <div class="card-list-header">
                     <h2 class="deck-title">欧皇增益 - 持有 <span class="count">0</span> 张</h2>
                     <hr class="deck-line">
                 </div>
             </div>
 
-            <div class="card-list" id="md">
+            <div class="card-list" id="MicroDiscomfort">
                 <div class="card-list-header">
                     <h2 class="deck-title">微弱不适 - 持有 <span class="count">0</span> 张</h2>
                     <hr class="deck-line">
                 </div>
             </div>
 
-            <div class="card-list" id="sd">
+            <div class="card-list" id="StrongDiscomfort">
                 <div class="card-list-header">
                     <h2 class="deck-title">重度不适 - 持有 <span class="count">0</span> 张</h2>
                     <hr class="deck-line">
                 </div>
             </div>
 
-            <div class="card-list" id="u">
+            <div class="card-list" id="Unacceptable">
                 <div class="card-list-header">
                     <h2 class="deck-title">反人类 - 持有 <span class="count">0</span> 张</h2>
                     <hr class="deck-line">
                 </div>
             </div>
 
-            <div class="card-list" id="t">
+            <div class="card-list" id="Technology">
                 <div class="card-list-header">
                     <h2 class="deck-title">特殊卡牌 - 持有 <span class="count">0</span> 张</h2>
                     <hr class="deck-line">
@@ -102,7 +102,7 @@
         </div>
     </div>
 
-    <!-- 顺手牵羊 -->
+    <!-- 打乱顺序 -->
     <div class="modal fade" id="take-model" data-backdrop="static" data-keyboard="false" tabindex="-1"
         aria-labelledby="take-modelLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg modal-dialog-centered">
@@ -132,8 +132,8 @@
 </body>
 
 <script src="js/jquery.min.js"></script>
-<script src="/destiny2/js/popper.min.js"></script>
-<script src="/destiny2/bootstrap/js/bootstrap.min.js"></script>
+<script src="js/popper.min.js"></script>
+<script src="bootstrap/js/bootstrap.min.js"></script>
 <script src="js/api.js"></script>
 <script src="js/decklist.js"></script>
 
