--- a/Destiny2/destiny2/globalevent.html
+++ b/Destiny2/destiny2/globalevent.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="destiny2/images/favicon.ico">
     <title>命运2 RogueLike 2.0</title>
-    <link rel="stylesheet" href="/destiny2/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/globalevent.css">
 </head>
 
@@ -112,10 +112,10 @@
     </div>
 </body>
 
-<script src="/destiny2/js/jquery.min.js"></script>
-<script src="/destiny2/bootstrap/js/bootstrap.min.js"></script>
-<script src="/destiny2/js/api.js"></script>
-<script src="/destiny2/js/lottery.js"></script>
-<script src="/destiny2/js/globalevent.js"></script>
+<script src="js/jquery.min.js"></script>
+<script src="bootstrap/js/bootstrap.min.js"></script>
+<script src="js/api.js"></script>
+<script src="js/lottery.js"></script>
+<script src="js/globalevent.js"></script>
 
 </html>
