--- a/Destiny2/destiny2/map.html
+++ b/Destiny2/destiny2/map.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="destiny2/images/favicon.ico">
+    <link rel="icon" href="images/favicon.ico">
     <title>命运2 RogueLike 2.0</title>
     <link rel="stylesheet" href="css/map.css">
 </head>
@@ -25,9 +25,9 @@
     </div>
 </body>
 
-<script src="/destiny2/js/jquery.min.js"></script>
-<script src="/destiny2/js/lottery.js"></script>
-<script src="/destiny2/js/api.js"></script>
-<script src="/destiny2/js/map.js"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/lottery.js"></script>
+<script src="js/api.js"></script>
+<script src="js/map.js"></script>
 
 </html>
