--- a/Destiny2/destiny2/options.html
+++ b/Destiny2/destiny2/options.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="destiny2/images/favicon.ico">
+    <link rel="icon" href="images/favicon.ico">
     <title>命运2 RogueLike 2.0</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/options.css">
@@ -15,7 +15,7 @@
     <div id="options">
         <div class="map-pane">
             <div class="map-info">
-                <img class="map-img" src="/destiny2/images/maps/raid/国王的陨落.jpg">
+                <img class="map-img" src="images/maps/raid/国王的陨落.jpg">
                 <p class="map-text">- 国王的陨落 -</p>
                 <button class="button map-button" data-toggle="modal" data-target="#map-model">选择地图</button>
             </div>
@@ -31,8 +31,8 @@
                     <div class="step map-step">5</div>
                 </div>
                 <div class="step-options">
-                    <button class="button" id="map-door">抵达遭遇战插旗点</button>
-                    <button class="button" id="map-next">遭遇战完成</button>
+                    <button class="button" id="map-door">抵达遭遇战插旗点（先点这个）</button>
+                    <button class="button" id="map-next">遭遇战完成（再点这个）</button>
                 </div>
             </div>
 
@@ -46,15 +46,15 @@
                     <div class="step chest-step">3</div>
                 </div>
                 <div class="step-options">
-                    <button class="button" id="chest-next">已获取</button>
+                    <button class="button" id="chest-next">已获取隐藏箱</button>
                 </div>
             </div>
         </div>
 
         <div class="options-pane">
-            <button class="button" id="money-button">更改货币数量</button>
-            <button class="button" id="card-button">增加抽卡次数</button>
-            <button class="button" id="flawless">无暇通关</button>
+            <button class="button" id="money-button">设置货币数量</button>
+            <button class="button" id="card-button">设置抽卡次数</button>
+            <button class="button" id="flawless">无暇通关（加 6 货币）</button>
         </div>
     </div>
 
@@ -67,35 +67,35 @@
                     <div class="map-list-box">
 
                         <div class="map-item" id="1">
-                            <img src="/destiny2/images/maps/raid/最后一愿.jpg" alt="最后一愿">
+                            <img src="images/maps/raid/最后一愿.jpg" alt="最后一愿">
                             <p>最后一愿</p>
                         </div>
                         <div class="map-item" id="2">
-                            <img src="/destiny2/images/maps/raid/救赎花园.jpg" alt="救赎花园">
+                            <img src="images/maps/raid/救赎花园.jpg" alt="救赎花园">
                             <p>救赎花园</p>
                         </div>
                         <div class="map-item" id="3">
-                            <img src="/destiny2/images/maps/raid/深岩墓室.jpg" alt="深岩墓室">
+                            <img src="images/maps/raid/深岩墓室.jpg" alt="深岩墓室">
                             <p>深岩墓室</p>
                         </div>
                         <div class="map-item" id="4">
-                            <img src="/destiny2/images/maps/raid/玻璃拱顶.jpg" alt="玻璃拱顶">
+                            <img src="images/maps/raid/玻璃拱顶.jpg" alt="玻璃拱顶">
                             <p>玻璃拱顶</p>
                         </div>
                         <div class="map-item" id="5">
-                            <img src="/destiny2/images/maps/raid/门徒誓约.jpg" alt="门徒誓约">
+                            <img src="images/maps/raid/门徒誓约.jpg" alt="门徒誓约">
                             <p>门徒誓约</p>
                         </div>
                         <div class="map-item" id="6">
-                            <img src="/destiny2/images/maps/raid/国王的陨落.jpg" alt="国王的陨落">
+                            <img src="images/maps/raid/国王的陨落.jpg" alt="国王的陨落">
                             <p>国王的陨落</p>
                         </div>
                         <div class="map-item" id="7">
-                            <img src="/destiny2/images/maps/raid/梦魇根源.jpg" alt="梦魇根源">
+                            <img src="images/maps/raid/梦魇根源.jpg" alt="梦魇根源">
                             <p>梦魇根源</p>
                         </div>
                         <div class="map-item" id="8">
-                            <img src="/destiny2/images/maps/raid/克洛塔的末日.jpg" alt="克洛塔的末日">
+                            <img src="images/maps/raid/克洛塔的末日.jpg" alt="克洛塔的末日">
                             <p>克洛塔的末日</p>
                         </div>
 
@@ -151,11 +151,11 @@
     </div>
 </body>
 
-<script src="/destiny2/js/jquery.min.js"></script>
-<script src="/destiny2/js/popper.min.js"></script>
-<script src="/destiny2/bootstrap/js/bootstrap.min.js"></script>
-<script src="/destiny2/js/lottery.js"></script>
-<script src="/destiny2/js/api.js"></script>
-<script src="/destiny2/js/options.js"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/popper.min.js"></script>
+<script src="bootstrap/js/bootstrap.min.js"></script>
+<script src="js/lottery.js"></script>
+<script src="js/api.js"></script>
+<script src="js/options.js"></script>
 
 </html>
