--- a/Destiny2/destiny2/event.html
+++ b/Destiny2/destiny2/event.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="destiny2/images/favicon.ico">
+    <link rel="icon" href="images/favicon.ico">
     <title>命运2 RogueLike 2.0</title>
-    <link rel="stylesheet" href="/destiny2/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/event.css">
 </head>
 
@@ -23,11 +23,11 @@
                             <p class="title">当前没有个人事件</p>
                             <p class="text">请过段时间再来</p>
                             <button class="button confirm" data-event="false">确认</button>
+                            <button class="button finish" style="display: none;" data-event="false">已完成</button>
                         </div>
                     </div>
                     <div class="event-card event-back"></div>
                 </div>
-                <p class="event-time"></p>
                 <p class="event-name">- 个人事件 -</p>
             </div>
         </div>
@@ -36,9 +36,9 @@
     </div>
 </body>
 
-<script src="/destiny2/js/jquery.min.js"></script>
-<script src="/destiny2/bootstrap/js/bootstrap.min.js"></script>
-<script src="/destiny2/js/api.js"></script>
-<script src="/destiny2/js/event.js"></script>
+<script src="js/jquery.min.js"></script>
+<script src="bootstrap/js/bootstrap.min.js"></script>
+<script src="js/api.js"></script>
+<script src="js/event.js"></script>
 
 </html>
