--- a/Destiny2/destiny2/gamepanel.html
+++ b/Destiny2/destiny2/gamepanel.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="destiny2/images/favicon.ico">
+    <link rel="icon" href="images/favicon.ico">
     <title>命运2 RogueLike 2.0</title>
     <link rel="stylesheet" href="css/gamepanel.css">
 </head>
@@ -45,17 +45,17 @@
         </div>
 
         <div class="main">
-            <iframe src="deck.html" frameborder="0" name="windows" style="width: 100%; height: 100%"></iframe>
+            <iframe src="globalevent.html" frameborder="0" name="windows" style="width: 100%; height: 100%"></iframe>
         </div>
 
-        <video src="/destiny2/audio/Beyond.mp3" id="event" controls></video>
-        <video src="/destiny2/audio/Queen.mp3" id="globalevent" controls></video>
+        <video src="audio/playerevent.mp3" id="event" controls></video>
+        <video src="audio/globalevent.mp3" id="globalevent" controls></video>
 
 </body>
 
-<script src="/destiny2/js/jquery.min.js"></script>
-<script src="/destiny2/js/lottery.js"></script>
-<script src="/destiny2/js/api.js"></script>
-<script src="/destiny2/js/gamepanel.js"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/lottery.js"></script>
+<script src="js/api.js"></script>
+<script src="js/gamepanel.js"></script>
 
 </html>
