--- a/Destiny2/destiny2/shop.html
+++ b/Destiny2/destiny2/shop.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="destiny2/images/favicon.ico">
+    <link rel="icon" href="images/favicon.ico">
     <title>命运2 RogueLike 2.0</title>
-    <link rel="stylesheet" href="/destiny2/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/shop.css">
 </head>
 
@@ -58,9 +58,9 @@
                 <h2 class="shop-title">固定售卖</h2>
                 <hr class="shop-line">
                 <div class="item-list">
-                    <div class="item water-1" style="background-image:url('images/card.png')"></div>
-                    <div class="item water-2" style="background-image:url('images/card.png')"></div>
-                    <div class="item water-3" style="background-image:url('images/card.png')"></div>
+                    <div class="item water water-1" data-deck="MicroDiscomfort" style="background-image:url('images/card.png')"></div>
+                    <div class="item water water-2" data-deck="StrongDiscomfort" style="background-image:url('images/card.png')"></div>
+                    <div class="item water water-3" data-deck="Unacceptable" style="background-image:url('images/card.png')"></div>
                     <div class="item draw-count" style="background-image:url('images/card.png')"></div>
                 </div>
             </div>
@@ -112,11 +112,11 @@
     <!-- <div class="shop-closed"></div> -->
 </body>
 
-<script src="/destiny2/js/jquery.min.js"></script>
-<script src="/destiny2/js/popper.min.js"></script>
-<script src="/destiny2/bootstrap/js/bootstrap.min.js"></script>
-<script src="/destiny2/js/lottery.js"></script>
-<script src="/destiny2/js/api.js"></script>
-<script src="/destiny2/js/shop.js"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/popper.min.js"></script>
+<script src="bootstrap/js/bootstrap.min.js"></script>
+<script src="js/lottery.js"></script>
+<script src="js/api.js"></script>
+<script src="js/shop.js"></script>
 
 </html>
