--- a/Destiny2/destiny2/home.html
+++ b/Destiny2/destiny2/home.html
@@ -82,6 +82,7 @@
 
                     <div class="box game-box">
                         <p class="title game-config">请确认已完整的阅读游戏说明和游戏玩法后进行游戏</p>
+                        <p class="title game-error">请开始游玩游戏之前使用 Ctrl + Shift + R 进行浏览器重新硬加载</p>
                         <p class="title game-title">请确认你能听得到以下音频</p>
                         <p class="title game-tips">免责声明：若事件触发没有声音，请检测浏览器是否开启了声音，电脑系统是否禁用了浏览器声音</p>
                         <audio class="audio" src="audio/playerevent.mp3" controls></audio>
