--- a/Destiny2/destiny2/bounty.html
+++ b/Destiny2/destiny2/bounty.html
@@ -12,9 +12,8 @@
 
 <body>
     <div id="bounty">
-
+        <h1>- 不可向任何队友透露自己的悬赏内容 -</h1>
         <div class="bounty-list">
-
             <div class="bounty-box">
                 <div class="bounty-item" id="bounty-1">
                     <div class="bounty-card bounty-front">
